[package]
name = "bitcoin-pool-identification"
version = "0.1.0"
authors = ["0xB10C <0xb10c@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "mining-pool", "identification"]
build = "build.rs"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/0xB10C/rust-bitcoin-pool-identification"

[dependencies]
serde = "1"
bitcoin = "0.26"
hex = "0.4"

[build-dependencies]
serde = "1"
serde_json = "1"
serde_with = "1.6.4"