[package]
name = "bitcoin-pool-identification"
description = "Coinbase tag and coinbase output address based mining-pool identification for rust-bitcoin's bitcoin::{Block, Transaction}"
version = "0.2.4"
authors = ["0xB10C <0xb10c@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bitcoin", "mining-pool", "identification"]
build = "build.rs"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/0xB10C/rust-bitcoin-pool-identification"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitcoin = "0.30"
hex = "0.4"

[build-dependencies]
serde = "1"
serde_json = "1"
serde_with = "1.6.4"
